syntax = "proto3";
package mqProto;
option go_package = "ControlCenter-Server/proto/mqproto";

message MQItem {
  bytes  buff = 1;
}

message PerformanceData{
  string server_id = 1;
  bytes buff = 2;
}